--- a/html/style.css
+++ b/html/style.css
@@ -50,15 +50,25 @@ body {
   text-align: center;
   font-size: 2em;
   float: left;
-  border-left: 2px solid #FFFFFF;
   border-right: 2px solid #FFFFFF;
   text-decoration: none;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
-#userbar {
-  background-color: #fff;
-  float: right;
-  width: 250px;
+.createContent {
+  background-color: #AA1515;
+  margin-bottom: 0.1em;
+  float: left;
+  width: 20%;
+  border-radius: 8px;
+}
+
+.createContentText {
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 1.2em;
+  text-decoration: none;
 }
 
 #footer {
@@ -98,15 +108,6 @@ h1, #footer {
 h3 {margin: 0; padding: 0;}
 
 /* Menu styles */
-.item {
-  background-color: #00728B;
-  border: 1px solid #032472;
-  color: #FFF;
-  font-family: Arial;
-  padding: 3px;
-  text-decoration: none;
-}
-
 .leftpart {
   width: 70%;
 }
@@ -135,6 +136,8 @@ h3 {margin: 0; padding: 0;}
 }
 
 textarea {
+  float: left;
+  margin-left: 8em;
   width: 500px;
   height: 200px;
 }
