--- a/html/style.css
+++ b/html/style.css
@@ -45,7 +45,7 @@ body {
   width: 100%;
 }
 
-.nav-item {
+.nav-item, .nav-hud {
   color: #FFFFFF;
   text-align: center;
   font-size: 2em;
@@ -54,6 +54,12 @@ body {
   text-decoration: none;
   padding-left: 1em;
   padding-right: 1em;
+}
+
+.nav-hud {
+  font-size: 100%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 .createContent {
@@ -78,6 +84,22 @@ body {
   border: 1px solid #404040;
   border-radius 12px;
   background-color: #E0E0E0;
+}
+
+.createForm {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  width: 95%;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.regField {
+  margin: 1em;
+}
+
+#submission {
+  padding: 1em;
 }
 
 #footer {
@@ -110,8 +132,15 @@ td {
 
 /* Begin font styles */
 h1, #footer {
+  margin-bottom: 0.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   font-family: Arial;
-  color: #F1F3F1;
+  color: #000000;
+  background-color: #A0A0A0;
+  width: 100%;
+  border-bottom: 2px solid #000000;
+  border-top: 2px solid #000000;
 }
 
 h3 {margin: 0; padding: 0;}
@@ -131,8 +160,10 @@ h3 {margin: 0; padding: 0;}
 }
 
 #footer {
-  font-size: 65%;
-  padding: 3px 0 0 0;
+  font-size: 70%;
+  border-top: 1px solid #000000;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .topic-post {
@@ -142,6 +173,21 @@ h3 {margin: 0; padding: 0;}
 
 .post-content {
   padding: 30px;
+}
+
+#replyText {
+  margin-top: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%;
+}
+
+#submitReply {
+  margin-top: 0.5em;
+  margin-bottom: 0.1em;
+  padding: 0.2em;
+  width: 30%;
+  float: right;
 }
 
 textarea {
