--- a/html/style.css
+++ b/html/style.css
@@ -90,16 +90,23 @@ body {
   margin-top: 1em;
   margin-bottom: 1em;
   width: 95%;
+  height: 15em;
   border: 1px solid #000000;
   border-radius: 5px;
+  text-align: left;
+  font-size: 125%;
+  font-weight: bold;
 }
 
 .regField {
-  margin: 1em;
+  margin: 0.1em;
+  width: 50%;
 }
 
 #submission {
-  padding: 1em;
+  float: right;
+  width: 40%;
+  margin-top: 2%;
 }
 
 #footer {
