--- a/html/style.css
+++ b/html/style.css
@@ -87,6 +87,7 @@ body {
 }
 
 .createForm {
+  padding: 0.75;
   margin-top: 1em;
   margin-bottom: 1em;
   width: 95%;
@@ -103,7 +104,7 @@ body {
   width: 50%;
 }
 
-#submission {
+.submission {
   float: right;
   width: 40%;
   margin-top: 2%;
